Run class tests